--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "node-js",
   "main": "todo.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,7 @@
   "author": "Florentina Vachente <flori@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "commander": "^12.1.0"
   }
 }
